periodic loop and dirty visualization of the conway sequence

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <title>Conway Sequence</title>
   </head>
   <body>
-    <span id="prev-val"></span>
-    <br></br>
-    <span id="curr-val"></span>
-    <br></br>
-    <button id="btn-calc-next">Calc next value</button>
+    Value : <span id="prev-val"></span>
+    <br>
+    Next : <span id="curr-val"></span>
+    <br>
+    Counter : <span id="count"></span>
+    <br><br>
+    <button id="clear">Reset</button>
 
-    <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/conway.js"></script>
   </body>
 </html>
