--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <script src="https://kit.fontawesome.com/99e3f0a9f8.js" crossorigin="anonymous"></script>
+    <script type="module" src="scripts/conway.js"></script>
     <title>Conway Sequence</title>
   </head>
   <body>
-    Value : <span id="prev-val"></span>
-    <br>
-    Next : <span id="curr-val"></span>
-    <br>
-    Counter : <span id="count"></span>
-    <br><br>
-    <button id="clear">Reset</button>
+    <div id="progess-bar"></div>
+    <div id="visualizer"></div>
 
-    <script type="module" src="scripts/conway.js"></script>
+    <footer>
+      <hr>
+      <div class="title">©2023 Conway Sequence Visualizer</div>
+      Made with <span class="rainbow-heart">❤</span> by VydrOz · <a href="https://github.com/VydrOz/conway-sequence"><i class="fa-brands fa-github"></i></a>
+    </footer>
   </body>
 </html>
