fix footer and add lines numbers

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   <body>
     <div id="progess-bar"></div>
     <div id="visualizer"></div>
-
-    <footer>
+    <div class="footer">
       <hr>
-      <div class="title">©2023 Conway Sequence Visualizer</div>
-      Made with <span class="rainbow-heart">❤</span> by VydrOz · <a href="https://github.com/VydrOz/conway-sequence"><i class="fa-brands fa-github"></i></a>
-    </footer>
+      <div class="title">©2023 Conway Sequence Visualizer</div> by VydrOz · <a href="https://github.com/VydrOz/conway-sequence"><i class="fa-brands fa-github"></i></a>
+    </div>
   </body>
 </html>
