--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="visualizer"></div>
     <div class="footer">
       <hr>
-      <div class="title">©2023 Conway Sequence Visualizer</div> by VydrOz · <a href="https://github.com/VydrOz/conway-sequence"><i class="fa-brands fa-github"></i></a>
+      <div class="title">©2023 Conway Sequence Visualizer</div>Made with <span class="rainbow-heart">❤</span> by VydrOz · <a href="https://github.com/VydrOz/conway-sequence"><i class="fa-brands fa-github"></i></a>
     </div>
   </body>
 </html>
